--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "build:cjs": "tsc -p tsconfig/cjs.json",
     "build": "run-s clean lint build:*",
     "lint": "tslint -p tsconfig.json -r tslint.json -r ./node_modules/tslint-microsoft-contrib --fix || true",
-    "test": "ts-node -P ./tsconfig/cjs.json ./node_modules/.bin/jasmine --config=spec/support/jasmine.json"
+    "test": "ts-node -P ./tsconfig/cjs.json ./node_modules/.bin/jasmine --config=spec/support/jasmine.json",
+    "size": "size-limit"
   },
   "repository": {
     "type": "git",
@@ -42,10 +43,21 @@
     "jasmine": "3.2.0",
     "npm-run-all": "4.1.3",
     "rimraf": "2.6.2",
+    "size-limit": "0.20.1",
     "ts-node": "7.0.1",
     "tslint": "5.11.0",
     "tslint-microsoft-contrib": "5.2.1",
     "typescript": "3.1.3"
   },
-  "types": "dist-types/SimpleAssertOK.d.ts"
+  "types": "dist-types/SimpleAssertOK.d.ts",
+  "size-limit": [
+    {
+      "path": "dist-es2015/SimpleAssertOK.js",
+      "limit": "500 B"
+    },
+    {
+      "path": "dist-cjs/SimpleAssertOK.js",
+      "limit": "500 B"
+    }
+  ]
 }
