--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "simple-assert-ok",
-  "version": "0.1.8",
+  "version": "0.1.9",
   "description": "A lightweight strongly-typed assert.ok",
   "author": {
     "name": "Alexander T.",
@@ -11,6 +11,8 @@
     "simpleassert",
     "simple-assert-ok",
     "assert",
+    "typed assert",
+    "typed assert-ok",
     "assert-ok",
     "assert-ok helper",
     "assert helper",
