--- a/package.json
+++ b/package.json
@@ -42,15 +42,16 @@
     "url": "git+https://github.com/a-tarasyuk/simple-assert-ok.git"
   },
   "devDependencies": {
-    "@size-limit/preset-small-lib": "4.9.0",
+    "@size-limit/preset-app": "4.9.0",
     "@types/jasmine": "3.6.2",
     "@typescript-eslint/eslint-plugin": "4.8.2",
     "@typescript-eslint/parser": "4.8.2",
     "eslint": "7.14.0",
     "jasmine": "3.6.3",
     "npm-run-all": "4.1.5",
-    "prettier": "^2.2.1",
+    "prettier": "2.2.1",
     "rimraf": "3.0.2",
+    "size-limit": "4.9.0",
     "ts-node": "9.0.0",
     "typescript": "4.1.2"
   },
