--- a/package.json
+++ b/package.json
@@ -42,31 +42,31 @@
     "url": "git+https://github.com/a-tarasyuk/simple-assert-ok.git"
   },
   "devDependencies": {
-    "@size-limit/preset-app": "4.9.0",
+    "@size-limit/preset-app": "8.1.0",
     "@size-limit/webpack": "8.1.0",
-    "@types/jasmine": "3.6.2",
-    "@typescript-eslint/eslint-plugin": "4.8.2",
-    "@typescript-eslint/parser": "4.8.2",
-    "eslint": "7.14.0",
-    "jasmine": "3.6.3",
+    "@types/jasmine": "4.3.1",
+    "@typescript-eslint/eslint-plugin": "5.48.0",
+    "@typescript-eslint/parser": "5.48.0",
+    "eslint": "8.31.0",
+    "jasmine": "4.5.0",
     "npm-run-all": "4.1.5",
-    "prettier": "2.2.1",
+    "prettier": "2.8.1",
     "rimraf": "3.0.2",
-    "size-limit": "4.9.0",
-    "ts-node": "9.0.0",
-    "typescript": "4.1.2"
+    "size-limit": "8.1.0",
+    "ts-node": "10.9.1",
+    "typescript": "4.9.4"
   },
   "types": "dist-types/SimpleAssertOK.d.ts",
   "size-limit": [
     {
       "path": "dist-es2015/SimpleAssertOK.js",
       "import": "{ assert }",
-      "limit": "500 B"
+      "limit": "1 kb"
     },
     {
       "path": "dist-cjs/SimpleAssertOK.js",
       "import": "{ assert }",
-      "limit": "500 B"
+      "limit": "1 kb"
     }
   ]
 }
